--- a/sass/interface/_section-unic.sass
+++ b/sass/interface/_section-unic.sass
@@ -1,111 +1,107 @@
 .section-unic
-    height: auto  
+    height: auto     
     position: relative
-    padding: 200px 0 
+    padding: 100px 0 
 
     .mramor
         position: absolute
-        bottom: 130px
-        left: 75px
+        bottom: 50px
+        left: 105px
+        width: 800px
+
     img.gold-fon
         position: absolute
-        right: 75px
-        top: 130px
+        right: 105px
+        top: 50px
+        width: 800px
 
     &-content
         width: 100%
         display: flex
         justify-content: flex-end
+        background-color: #ffffff
+        position: relative
+        box-shadow: 0 0 7px 1px rgba(0, 0, 1, 0.36)
 
         .carts
             width: 100%
-            position: relative
+            display: flex
+            flex-direction: column
+            height: 680px
 
-            &-content
-                position: relative
-                background-color: #ffffff
-                height: auto
-                width: 100%
+            .row1, .row2
                 display: flex
-                flex-direction: column
-                box-shadow: 0 0 7px 1px rgba(0, 0, 1, 0.36)
+                height: 50%
 
-
-                .row1, .row2
+                .cart
                     display: flex
+                    flex-direction: column
+                    width: 50%
                     height: 100%
-                .row1
-                    margin-bottom: 0px
-                .row1, .row2
-                    height: 50%
-                    .cart3, .cart4
-                        padding-bottom: 80px !important
-                    .cart
-                        display: flex
-                        flex-direction: column
-                        justify-content: center
-                        align-items: flex-start
-                        padding-left: 70px
-                        padding-bottom: 80px
-                        width: 50%
-                        padding-top: 30px
-                        img.hover-fon
-                            position: absolute
-                            top: 0
-                            left: 0
-                            width: 100%
-                            height: auto
-                            display: none
-                        h1
-                            position: relative
-                            width: 450px
-                            color: #1f2024
-                            font-size: 30px
-                            +PT
+                    padding: 20px 50px
 
+                    h1
+                        color: #1f2024
+                        font-size: 36px
+                        +PT
+                    
+                    p.number
+                        color: #000000
+                        font-size: 50px
+                        +PT
+
+                    h3
+                        color: #000000
+                        font-size: 24px
+                        +PT
+
+                    hr
+                        border: 1px solid #aa8d37
+                        width: 190px
+                        margin-left: 0
+
+                    p.cart-text
+                        color: #000000
+                        font-size: 16px
+                        +PT
+                        width: 420px
+
+                    &:hover
                         p.number
-                            position: relative
-                            color: #aa8d37
+                            color: #ffffff
                             font-size: 50px
-                            font-weight: 400
                             +PT
 
                         h3
-                            position: relative
-                            color: #aa8d37
+                            color: #ffffff
                             font-size: 24px
-                            font-weight: 400
                             +PT
 
                         hr
-                            position: relative
+                            border: 1px solid #aa8d37
                             width: 190px
-                            border: 2px solid #aa8d37
-                            margin: 16px 0
+                            margin-left: 0
 
                         p.cart-text
-                            position: relative
-                            color: #1d1f23
-                            font-size: 14px
-                            font-weight: 400
+                            color: #ffffff
+                            font-size: 16px
                             +PT
-                            max-width: 450px
 
-                        &:hover
-                            p
-                                color: #ffffff
-                            h3
-                                color: #ffffff
-
-                        
-                    .cart2:hover
+                .cart2
+                    &:hover
                         background: url(../image/section-unic/card1.png) no-repeat center
                         background-size: cover
-                    
-                    .cart3:hover
+
+                .cart3
+                    padding: 0px 50px
+                    padding-bottom: 50px
+                    &:hover
                         background: url(../image/section-unic/card2.png) no-repeat center
                         background-size: cover
 
-                    .cart4:hover
+                .cart4
+                    padding: 0px 50px
+                    padding-bottom: 50px
+                    &:hover
                         background: url(../image/section-unic/card3.png) no-repeat center
                         background-size: cover
