--- a/sass/_section-tabs.sass
+++ b/sass/_section-tabs.sass
@@ -47,11 +47,17 @@
                     +PT
                     transform: translateY(3.5px)
                     transition: 0.5s all
+                    transition: color 0.3s 
 
                     &.active
                         padding-top: 3.5px
                         border-bottom: 5px solid #000
                         transform: translateY(3.5px)
+                        color: $color-text
+
+
+                    &:hover
+                        color: $color-text
                         
 
             .tabs__content            
