--- a/sass/style.sass
+++ b/sass/style.sass
@@ -66,6 +66,13 @@ h1, h2, h3, h4, h5, h6, p, span,
 input[name="phone"]
     color: #ffffff
 
+input[name="email"], input[name="name"]
+    opacity: 1
+    color: $color-white
+    &:focus::-webkit-input-placeholder 
+        transition: opacity 0.3s ease
+        opacity: 0
+
 input[type="submit"]
     &:hover
         cursor: pointer
